--- a/src/components/Accordion/Accordion.module.scss
+++ b/src/components/Accordion/Accordion.module.scss
@@ -11,6 +11,7 @@ h3 {
 .AccordionTrigger {
   position: relative;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   border-radius: 8px;
@@ -19,17 +20,24 @@ h3 {
   width: 265px;
   height: 45px;
   cursor: pointer;
-  @media screen and (max-width: 1024px) {
+
+  @media screen and (max-width: 1101px) {
     width: 220px;
-    height: 45px;
   }
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 1001px) {
+    width: 200px;
+  }
+  @media screen and (max-width: 877px) {
     width: 160px;
-    height: 45px;
   }
-  @media screen and (max-width: 320px) {
+  @media screen and (max-width: 698px) {
     width: 280px;
-    height: 45px;
+  }
+  @media screen and (max-width: 617px) {
+    width: 320px;
+  }
+  @media screen and (max-width: 380px) {
+    width: 276px;
   }
 
   .label {
@@ -38,6 +46,7 @@ h3 {
   }
 
   .AccordionChevron {
+    fill: var(--line);
     transition: transform 300ms cubic-bezier(0.87, 0, 0.13, 1);
     margin-right: 15px;
   }
@@ -53,19 +62,32 @@ h3 {
 }
 
 .AccordionContent {
-  width: 265px;
-  height: 85px;
+  width: var(--radix-popover-trigger-width);
+  min-height: 85px;
   overflow: hidden;
-  font-size: 15px;
   background: var(--background-color);
   border: var(--border);
   border-top: none;
   border-radius: 0 0 8px 8px;
-  cursor: pointer;
 
   .inputBlock {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
+    @media screen and (max-width: 1024px) {
+      margin-bottom: 20px;
+    }
+
+    .dash {
+      display: inline-flex;
+      margin-top: 42px;
+      background-color: var(--text);
+      width: 12px;
+      height: 1px;
+      @media screen and (max-width: 1024px) {
+        display: none;
+      }
+    }
 
     .input {
       width: 95px;
@@ -90,10 +112,4 @@ h3 {
       }
     }
   }
-}
-.dash {
-  margin-top: 42px;
-  background-color: var(--text);
-  width: 12px;
-  height: 1px;
 }
