--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -8,13 +8,14 @@
   margin: 0 auto;
   padding: 35px 0 97px 0;
 }
+
 input {
   outline: none;
 }
+
 .input {
   width: 248px;
   height: 43px;
-  padding-left: 15px;
   border-radius: 8px;
   border: var(--border);
   background: var(--background-color);
@@ -23,69 +24,65 @@ input {
   font-style: normal;
   font-weight: 400;
   position: relative;
+  text-indent: 12px;
 
   &:focus {
     border: var(--border);
   }
-  /*  @media screen and (max-width: 1157px) {
-    width: 215px;
-    height: 45px;
-  }*/
-  @media screen and (max-width: 1024px) {
+
+  @media screen and (max-width: 1101px) {
     width: 220px;
-    height: 45px;
   }
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 1001px) {
+    width: 200px;
+  }
+
+  @media screen and (max-width: 877px) {
     width: 160px;
-    height: 45px;
   }
-  @media screen and (max-width: 320px) {
+
+  @media screen and (max-width: 698px) {
     width: 280px;
-    height: 45px;
+  }
+  @media screen and (max-width: 617px) {
+    width: 320px;
+  }
+  @media screen and (max-width: 380px) {
+    width: 276px;
   }
 }
 
-.pag {
-  padding-left: 15px;
-}
-
-.arrowSvg {
-  fill: var(--icon-color);
-  cursor: pointer;
-  padding-left: 20px;
-}
-
-.loader {
+.filtrationBlock {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-wrap: wrap;
+  margin-bottom: 45px;
+  justify-content: space-around;
+  gap: 10px;
+}
+
+.IconBlock {
+  min-width: 100%;
+  display: flex;
   align-items: center;
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
-  border-top: 4px solid #fff;
-  border-right: 4px solid transparent;
-  box-sizing: border-box;
-  animation: rotation 1s linear infinite;
-}
-.loader::after {
-  content: "";
-  box-sizing: border-box;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
-  border-left: 4px solid #ff3d00;
-  border-bottom: 4px solid transparent;
-  animation: rotation 0.5s linear infinite reverse;
-}
-@keyframes rotation {
-  0% {
-    transform: rotate(0deg);
+  justify-content: space-between;
+  margin-bottom: 60px;
+  .arrowSvg {
+    fill: var(--icon-color);
+    cursor: pointer;
+    padding-right: 13px;
   }
-  100% {
-    transform: rotate(360deg);
+  .logo {
+    padding-left: 13px;
+  }
+}
+
+.paginator {
+  padding-left: 12px;
+  @media screen and (max-width: 617px) {
+    padding-left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
   }
 }
